# SMTC4J

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: build-release.yml  native-windows.yml
gradle/wrapper/: gradle-wrapper.properties
native/: SMTC4J.cpp
src/main/java/dev/codeman/smtc4j/: MediaInfo.java  MediaKey.java  PlaybackState.java  SMTC4J.java
src/test/java/: Main.java
